#2121: Corrected issue with page content varying slightly in width due to presence or absence of the scrollbar

--- a/ui/web/main/src/web/stylesheets/bootstrap-additional.css
+++ b/ui/web/main/src/web/stylesheets/bootstrap-additional.css
@@ -143,6 +143,10 @@ span.rtf {
 }
 
 /* Override some defaults from bootstrap */
+html {
+    scrollbar-gutter: stable;
+}
+
 body {
     background-color: #eeeeee !important;
 }
